[gd_scene load_steps=13 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://resources/sprite_heads.tres" type="SpriteFrames" id=3]
[ext_resource path="res://audio/run.ogg" type="AudioStream" id=4]
[ext_resource path="res://scripts/level.gd" type="Script" id=5]
[ext_resource path="res://scripts/enemies/enemy_parachutist.gd" type="Script" id=6]
[ext_resource path="res://resources/levels/level_test.tres" type="Resource" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 320, 24 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 24, 24 )

[node name="Test" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_vertical_guides_": [ 320.0 ]
}
level_data_test = ExtResource( 7 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0.631373, 0.776471, 0.960784, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Ground" type="ColorRect" parent="."]
margin_top = 320.0
margin_right = 640.0
margin_bottom = 368.0
color = Color( 0.937255, 0.937255, 0.937255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Floor" type="StaticBody2D" parent="." groups=[
"Floor",
]]
position = Vector2( 0, 328 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 320, 16 )
shape = SubResource( 1 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 320, 288 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="SpriteBody" type="AnimatedSprite" parent="Player"]
frames = SubResource( 2 )
animation = "idle"

[node name="SpriteHead1" type="AnimatedSprite" parent="Player"]
position = Vector2( -32, -32 )
scale = Vector2( 0.5, 0.5 )
frames = ExtResource( 3 )
animation = "idle"

[node name="SpriteHead2" type="AnimatedSprite" parent="Player"]
position = Vector2( 32, -32 )
scale = Vector2( 0.5, 0.5 )
frames = ExtResource( 3 )
animation = "idle"

[node name="SoundWalk" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 4 )
volume_db = -12.0

[node name="TimerCooldownLeft" type="Timer" parent="Player"]
one_shot = true

[node name="TimerCooldownRight" type="Timer" parent="Player"]
one_shot = true

[node name="TimerStart" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="TimerLevel" type="Timer" parent="."]
one_shot = true

[node name="EnemyParachutist" type="KinematicBody2D" parent="."]
position = Vector2( 256, -48 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="EnemyParachutist"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 3 )
animation = "fall"

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyParachutist"]
shape = SubResource( 4 )

[node name="AreaSteal" type="Area2D" parent="EnemyParachutist"]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyParachutist/AreaSteal"]
shape = SubResource( 5 )

[node name="TimerSteal" type="Timer" parent="EnemyParachutist"]
one_shot = true

[connection signal="timeout" from="Player/TimerCooldownLeft" to="Player" method="_on_TimerCooldownLeft_timeout"]
[connection signal="timeout" from="Player/TimerCooldownRight" to="Player" method="_on_TimerCooldownRight_timeout"]
[connection signal="timeout" from="TimerStart" to="." method="_on_TimerStart_timeout"]
[connection signal="area_entered" from="EnemyParachutist/AreaSteal" to="EnemyParachutist" method="_on_AreaSteal_area_entered"]
[connection signal="timeout" from="EnemyParachutist/TimerSteal" to="EnemyParachutist" method="_on_TimerSteal_timeout"]
